Started work on the frontend! Using Chrono for copyright

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,6 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Yew App</title>
+        <title>Just Another Rust Based Website...</title>
     </head>
 </html>
