--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <title>Just Another Rust Based Website...</title>
     </head>
+    <body>
+        
+    </body>
 </html>
